# systematic-equity-strategy

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
scripts/: _report.py  run_backtest.py  run_synthetic.py
src/systematic_strategy/: __init__.py  backtest.py  costs.py  data.py  metrics.py  plotting.py  portfolio.py  signals.py
tests/: conftest.py  test_backtest.py  test_costs.py  test_metrics.py  test_portfolio.py  test_signals.py
